# sealy-lang

./: .gitignore  Cargo.toml  README.md
api/include/: lexer.h  parser.h  symbols.h
api/lib/: seal_lexer.def  seal_parser.def  seal_symbols.def
api/lib/x64/: seal_lexer.exp  seal_lexer.lib  seal_parser.exp  seal_parser.lib  seal_symbols.exp  seal_symbols.lib
api/lib/x86/: seal_lexer.exp  seal_lexer.lib  seal_parser.exp  seal_parser.lib  seal_symbols.exp  seal_symbols.lib
ast/: Cargo.toml
ast/src/: expression.rs  items.rs  lambda.rs  lib.rs  literal.rs  scope.rs  statement.rs  type_name.rs
ast/src/control_flow/: fors.rs  ifs.rs  loops.rs  matches.rs  whiles.rs
ir/: Cargo.toml
lexer/: Cargo.toml
lexer/src/: c_api.rs  dfa.rs  emoji.rs  keywords.rs  lib.rs  seal_dfa.rs
parser/: Cargo.toml
parser-passes/: Cargo.toml
parser-passes/src/: const_eval.rs  lib.rs
parser/src/: c_api.rs  lib.rs  num_literal.rs  parser.lalrpop  parser.rs  string_literal.rs
parser/src/ast/: expression.rs  items.rs  literal.rs  mod.rs  statement.rs  type_name.rs
parser/src/ast/control_flow/: fors.rs  ifs.rs  mod.rs
scripts/: example1.seal  example2.seal  example3.seal  example4.seal  parsetest.seal
scripts/std/: iter.seal  lib.seal  option.seal  result.seal
src/: lib.rs
src/lexer/: keywords.rs  mod.rs  seal_dfa.rs
src/parser/: mod.rs  parser.lalrpop  parser.rs
src/parser/ast/: expression.rs  items.rs  lambda.rs  literal.rs  mod.rs  ops.rs  scope.rs  statement.rs  type_name.rs
src/vm/value/: mod.rs  sym.rs  (+2 more)
symbols/: Cargo.toml
symbols/src/: c_api.rs  lib.rs
(+2 files in other folders)
